Add checkbox and tab

--- a/demo/src/app/pages/home/home.html
+++ b/demo/src/app/pages/home/home.html
@@ -37,6 +37,7 @@ import { L_SEMANTIC_UI_MODULE } from 'angularx-semantic-ui';
   ],
   imports: [
     BrowserModule,
+    BrowserAnimationsModule,
     CommonModule,
     FormsModule,
     ReactiveFormsModule,
