--- a/demo/src/app/pages/home/home.html
+++ b/demo/src/app/pages/home/home.html
@@ -1,7 +1,8 @@
 <h1 class="ui header">
   Get Started
   <div class="sub header m-t">
-    This is a angular component sets of semantic-ui, and no <strong>jQuery</strong> dependency
+    This is a angular component sets of semantic-ui, and no
+    <strong>jQuery</strong> dependency
   </div>
 </h1>
 
@@ -52,6 +53,23 @@ export class AppModule { }
 </div>
 
 <div class="m-t-md">
+  <h3 class="ui dividing header">Break Change</h3>
+  <ul class="change-log">
+    <li>
+      <span class="date">Dropdown Component</span> Add
+      <strong>isField</strong> property ( for object array ), default is
+      <strong>id</strong>
+    </li>
+    <li>
+      <span class="date">Modal Component</span> Removed
+      <strong>ngModel</strong>, Add
+      <strong>show()</strong> and
+      <strong>hide()</strong> methods
+    </li>
+  </ul>
+</div>
+
+<div class="m-t-md">
   <h3 class="ui dividing header">Change Log</h3>
   <ul class="change-log">
     <li>
@@ -89,6 +107,11 @@ export class AppModule { }
     <li>
       <span class="date">2017-08-12</span> Fix bug when using angular-cli to run
       <b>ng build -prod</b>
+    </li>
+    <li>
+      <span class="date">2017-11-xx</span> Support
+      <strong>Angular 5</strong> and change name to
+      <strong>angularx-semantic-ui</strong>
     </li>
   </ul>
 </div>
