--- a/demo/src/app/pages/home/home.html
+++ b/demo/src/app/pages/home/home.html
@@ -62,7 +62,8 @@ export class AppModule { }
     </li>
     <li>
       <span class="date">Modal Component</span> Removed
-      <strong>ngModel</strong>, Add
+      <strong>ngModel</strong>, use
+      <strong>active</strong> instead, add
       <strong>show()</strong> and
       <strong>hide()</strong> methods
     </li>
