--- a/demo/src/app/pages/home/home.html
+++ b/demo/src/app/pages/home/home.html
@@ -56,9 +56,9 @@ export class AppModule { }
   <h3 class="ui dividing header">Break Change</h3>
   <ul class="change-log">
     <li>
-      <span class="date">Dropdown Component</span> Add
-      <strong>isField</strong> property ( for object array ), default is
-      <strong>id</strong>
+      <span class="date">TagsInput Component</span> Removed
+      <strong>validators</strong> and
+      <strong>invalidMsg</strong>
     </li>
     <li>
       <span class="date">Modal Component</span> Removed
@@ -66,6 +66,11 @@ export class AppModule { }
       <strong>active</strong> instead, add
       <strong>show()</strong> and
       <strong>hide()</strong> methods
+    </li>
+    <li>
+      <span class="date">Dropdown Component</span> Add
+      <strong>isField</strong> property ( for object array ), default is
+      <strong>id</strong>
     </li>
   </ul>
 </div>
