--- a/demo/src/app/pages/modal/modal.html
+++ b/demo/src/app/pages/modal/modal.html
@@ -12,7 +12,7 @@
   <div class="ui info message">
     <p>Click button to show modal.</p>
   </div>
-  <lsu-modal #demoModal [options]="modalOptions">
+  <lsu-modal #demoModal [options]="modalOptions" [active]="active">
     <div class="header">
       Profile Picture
     </div>
