--- a/demo/src/app/pages/_layout/_layout.html
+++ b/demo/src/app/pages/_layout/_layout.html
@@ -1,7 +1,7 @@
 <div class="ui visible inverted left vertical sidebar menu" #sidebar>
   <a routerLink="/">
     <div class="logo">
-      <img src="http://semantic-ui.com/images/logo.png">
+      <img src="https://semantic-ui.com/images/logo.png">
       <div class="title">
         Angular
         <span>x</span>
@@ -27,6 +27,6 @@
     <a class="item menu" routerLink="/tags-input" routerLinkActive="active">Tags Input</a>
   </div>
 </div>
-<div class="content">
+<div id="main-content" class="content">
   <router-outlet></router-outlet>
 </div>
